--- a/code/presentation.Rmd
+++ b/code/presentation.Rmd
@@ -3,9 +3,9 @@ title: '**Factors Related to Parental Involvement in School**'
 author: "Tanesia Beverly, Andy Zukerberg, Erin Murrock"
 date: "1/11/2020"
 output:
-  ioslides_presentation: default
   powerpoint_presentation:
     reference_doc: presentation1.pptx
+  ioslides_presentation: default
 subtitle: Data Science Institute, American University
 ---
 
@@ -45,6 +45,7 @@ knitr::opts_chunk$set(echo = FALSE,
 
 - Recoded data to remove valid skips 
 - Converted some variables to 0 for no and 1 for yes to facilitate counting
+- Created new variables for family activities, school involement and satisfaction with school 
 - Removed homeschooled children
 
 
@@ -59,6 +60,90 @@ knitr::opts_chunk$set(echo = FALSE,
 - Descriptive Statistics
 - Dimension Reduction (EFA)
 - Regression Analysis
+
+## **Variables of Interest**
+Age2015= Age of child as of December 31st, 2015
+
+Hhtotalxx= number of people in the household
+
+Pargradex= parent or guardians highest level of education
+
+Ttlhhinc= total household income, categorical
+
+Scpubpri= child is enrolled in a public or private school
+
+Sneighbrx= parent moved to neighborhood for school
+
+Sefuturex=parent’s expectation for child’s future education (not finish HS to graduate school)
+
+RACEETH2- recoded race and ethnicity of child
+
+FA-count of at home activities. Comprised of:
+FOSTORY2X (told child a story past week), focrafts(did arts and crafts past week), fogames (played games with child past week), fobuildx (worked on prokect with child past week), fosport(played sports with child past week), forespon (discussed time management with child past week), fohistx (talked about family history with child past week), folibrayx (took child to library past month, fobookstx (took child to bookstore past month), foconcrtx (took child to concert past month), fomuseumx (took child to museum past month), fozoox (took child to zoo past month), fogroupx (attended event with child past month), fosprtevx (attend athletic event with child past month)
+
+SSatis- satisfaction with school. Comprised of:
+FCSHOOL (satisfaction with school child attends, FCTEACHR (satisfaction with teachers), FCSTDS (satisfaction with academic standards), FCORDER (satisfaction with order and discipline at school), FCSUPPRT (satisfaction with way school interacts with parents
+
+## **Outcome Variable**
+FS- count of school activities parent participated in. 
+Comprised of:	
+FSSPORTX (attended school or class event, science fair, etc.), FSVOL(volunteered at school), FSMTNG(attended a general school meeting), FSPTMTNG (attended a PTA meeting, FSATCNFN ( gone to a parent teacher conference), FSFUNDRS (participated in fundraising for the school), FSCOMMTE (served on a school committee), FSCOUNSLR (met with the guidance counselor in person).
+
+##**Initial Regression**
+Residuals:
+    Min      1Q  Median      3Q     Max 
+-5.7709 -1.0177  0.0583  1.0501  5.4114 
+
+Coefficients:
+             Estimate Std. Error t value Pr(>|t|)    
+(Intercept)  3.224210   0.116115  27.767   <2e-16 ***
+AGE2015     -0.070933   0.004016 -17.662   <2e-16 ***
+hhtotalxx    0.011937   0.010832   1.102   0.2705    
+pargradex    0.199829   0.014607  13.680   <2e-16 ***
+ttlhhinc     0.087108   0.005825  14.955   <2e-16 ***
+FA           0.260147   0.008965  29.018   <2e-16 ***
+SSatis      -0.054204   0.004512 -12.013   <2e-16 ***
+public      -0.768399   0.042936 -17.896   <2e-16 ***
+sneighbrx    0.073768   0.034558   2.135   0.0328 *  
+sefuturex    0.125544   0.011685  10.744   <2e-16 ***
+---
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
+
+Residual standard error: 1.524 on 13513 degrees of freedom
+Multiple R-squared:  0.2726,	Adjusted R-squared:  0.2721 
+F-statistic: 562.7 on 9 and 13513 DF,  p-value: < 2.2e-16
+##**Poisson Regression**
+Deviance Residuals: 
+    Min       1Q   Median       3Q      Max  
+-3.4397  -0.5443   0.0289   0.5053   2.6498  
+
+Coefficients:
+             Estimate Std. Error z value Pr(>|z|)    
+(Intercept)  1.095827   0.038737  28.289   <2e-16 ***
+AGE2015     -0.016818   0.001307 -12.866   <2e-16 ***
+hhtotalxx    0.004260   0.003602   1.182    0.237    
+pargradex    0.051818   0.004926  10.520   <2e-16 ***
+ttlhhinc     0.022283   0.001959  11.372   <2e-16 ***
+FA           0.066241   0.002983  22.208   <2e-16 ***
+SSatis      -0.014556   0.001554  -9.367   <2e-16 ***
+public      -0.162918   0.012828 -12.700   <2e-16 ***
+sneighbrx    0.015885   0.011133   1.427    0.154    
+sefuturex    0.035777   0.004083   8.762   <2e-16 ***
+---
+Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1
+
+(Dispersion parameter for poisson family taken to be 1)
+
+    Null deviance: 13187  on 13522  degrees of freedom
+Residual deviance: 10243  on 13513  degrees of freedom
+AIC: 52140
+
+Number of Fisher Scoring iterations: 4
+
+> exp(coef(posfit))
+(Intercept)     AGE2015   hhtotalxx   pargradex    ttlhhinc          FA      SSatis      public   sneighbrx   sefuturex 
+  2.9916558   0.9833223   1.0042689   1.0531837   1.0225335   1.0684842   0.9855492   0.8496606   1.0160114   1.0364248 
+
 
 ## **Results: Dimensionality Reduction**
 
